Fix overflow clipping of bookmark tags

--- a/src/assets/css/blocks/bookmark.css
+++ b/src/assets/css/blocks/bookmark.css
@@ -8,7 +8,6 @@
   border: var(--border-default);
   border-radius: 50px;
   padding: 0 var(--space-small);
-  margin-left: -0.5rem;
 }
 
 .bookmark-header {
