--- a/src/assets/css/utilities.css
+++ b/src/assets/css/utilities.css
@@ -131,6 +131,18 @@
   width: 1px;
 }
 
+@media (min-width: 800px) {
+  .lg-visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+}
+
 /* u: Grow */
 
 .grow {
